exports[`test calculates font size based on props 1`] = `
<FitTextWithoutData compressor={2} minFontSize={10} maxFontSize={20}>
  <div>
    <h1>
      test
    </h1>
  </div>
</FitTextWithoutData>
`;

exports[`test renders 1`] = `
<FitTextWithoutData compressor={1} minFontSize={-Infinity} maxFontSize={Infinity}>
  <div>
    <h1>
      test
    </h1>
  </div>
</FitTextWithoutData>
`;
